# AirSim

./: .gitignore  BATTERY_SENSOR_QUICKSTART.md  INFRARED_CAMERA_FIX_SUMMARY.md  INTEGRATION_EXAMPLES.md  INTEGRATION_ROADMAP.md  Segmentation_Diagnosis.md  Segmentation_HISM_Bug_Analysis.md  segmentation_camera_analysis.md  set_cone_segmentation.py  validate_infrared_camera.py
AirLib/include/common/: AirSimSettings.hpp
AirLib/include/sensors/: SensorBase.hpp  SensorFactory.hpp
AirLib/include/sensors/battery/: BatterySensorBase.hpp  BatterySensorParams.hpp  BatterySensorSimple.hpp
GazeboDrone/: BUILD_GUIDE.md  CMakeLists.txt  CMakeLists.txt.bak  GAZEBO_IGNITION_SETUP.md  README.md
GazeboDrone/src/: main_gz.cpp
Unreal/Plugins/AirSim/Content/Blueprints/: BP_5D-4.uasset
Unreal/Plugins/AirSim/Source/: PIPCamera.cpp  PIPCamera.h  UnrealImageCapture.cpp
Unreal/Plugins/AirSim/Source/Annotation/: ObjectAnnotator.cpp  ObjectAnnotator.h
docs/: gazebo_drone.md
docs/integration/: 00_MASTER_TECHNICAL_SPECIFICATION.md  00_OVERVIEW.md  01_FEATURE_COMPARISON.md  01_IMPLEMENTATION_ROADMAP.md  02_ARCHITECTURE_DESIGN.md  02_DETAILED_TASK_LIST.md  03_IMPLEMENTATION_PLAN.md  03_TESTING_STRATEGY.md  04_AI_AGENT_GUIDE.md  04_TASK_LIST.md  05_FLOW_DIAGRAMS.md  06_API_SPECIFICATION.md  07_TESTING_STRATEGY.md  08_QUICK_REFERENCE.md  AI_AGENT_INSTRUCTIONS.md  COMPARISON_TABLE.md  CPP_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  REVIEW_FINDINGS.md  SECOND_REVIEW.md  TASK_LIST_DETAILED.md  TECH_SPEC_BATTERY.md  TESTING_PLAN.md  UPDATES_SUMMARY.md
(+16 files in other folders)
